# Shell-Game-Engine

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  README.md  appveyor.yml  conanfile-unix.txt  conanfile-windows.txt  conanfile.txt
Editor/: CMakeLists.txt
Editor/assets/shaders/flat-color/: fragment.glsl  vertex.glsl
Editor/assets/shaders/textured/: fragment.glsl  vertex.glsl
Editor/src/: main.cpp
Editor/src/Core/: FileDialog.cpp  FileDialog.h
Editor/src/Events/: EditorEvents.h
Editor/src/Layers/: UILayer.cpp  UILayer.h
Editor/src/Project/: ProjectSerializer.cpp  ProjectSerializer.h  SceneSerializer.cpp  SceneSerializer.h
Editor/src/UI/: UILayer.cpp  UILayer.h
Editor/src/UI/Panel/: EntityPropsPanel.cpp  EntityPropsPanel.h  Panel.h
Shaders/: SimpleFragmentShader.frag
Vendors/Glad/: CMakeLists.txt
Vendors/Glad/include/glad/: glad.h
Vendors/Glad/src/: glad.c
src/: main.cpp
src/Engine/: lib.h
src/Engine/Core/: Application.cpp  Application.h  Assert.h  Base.h  EngineVersion.h  InputService.h  Logger.cpp  Logger.h  Profiling.h  Renderer.cpp  Renderer.h  Utils.h  Window.cpp  Window.h  shellpch.h
src/Engine/Core/Events/: ApplicationEvent.h  Event.h  EventPublisher.cpp  EventPublisher.h  GamepadEvent.h  KeyEvent.h  MouseEvent.h
src/Engine/Core/Events/Codes/: GamePadCodes.h  KeyCodes.h  MouseCodes.h
src/Engine/Core/Layers/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  UiLayer.cpp  UiLayer.h
src/Engine/Core/Rendering/: API.h  Buffer.cpp  Buffer.h  BufferContainer.cpp  BufferContainer.h  Camera.cpp  Camera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  RenderQueue.cpp  RenderQueue.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Engine/Physics/: PhysicsEngineManager.cpp  PhysicsEngineManager.h
src/Engine/Project/: Project.cpp  Project.h  ProjectBlueprint.cpp  ProjectBlueprint.h  ProjectSettings.cpp  ProjectSettings.h  Scene.cpp  Scene.h  SceneBlueprint.cpp  SceneBlueprint.h
src/Engine/Project/Entities/: Components.h  EntityManager.cpp  EntityManager.h  SceneEntity.cpp  SceneEntity.h
src/Engine/Runtime/: RuntimeManager.cpp  RuntimeManager.h
src/Engine/Runtime/Mono/: MonoRuntime.cpp  MonoRuntime.h  RuntimeData.h  debug-helpers.cpp  debug-helpers.h  helpers.cpp  helpers.h  p_runtime_exports.cpp  p_runtime_exports.h
src/Engine/Scripting/: ScriptExecutionManager.cpp  ScriptExecutionManager.h  VisualStudioProjectManager.cpp  VisualStudioProjectManager.h
src/Engine/UI/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
src/Engine/Utils/: Uuid.cpp  Uuid.h  Xml.cpp  Xml.h
src/Platform/MacOS/: MacOSInputService.cpp  MacOSInputService.h
src/Platform/Rendering/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLBufferContainer.cpp  OpenGLBufferContainer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRenderCommand.cpp  OpenGLRenderCommand.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h
src/Sandbox/: main.cpp
src/Sandbox/Layers/: RenderLayer.cpp  RenderLayer.h  SampleLayer.h
